--- a/IndianPines_DataSet_Preparation_Without_Augmentation.ipynb
+++ b/IndianPines_DataSet_Preparation_Without_Augmentation.ipynb
@@ -23,6 +23,7 @@
     "import spectral\n",
     "import scipy.ndimage\n",
     "from skimage.transform import rotate\n",
+    "import os\n",
     "%matplotlib inline"
    ]
   },
@@ -42,8 +43,9 @@
    },
    "outputs": [],
    "source": [
-    "input_mat = scipy.io.loadmat('data/Indian_pines.mat')['indian_pines']\n",
-    "target_mat = scipy.io.loadmat('data/Indian_pines_gt.mat')['indian_pines_gt']"
+    "DATA_PATH = os.path.join(os.getcwd(),\"Data\")\n",
+    "input_mat = scipy.io.loadmat(os.path.join(DATA_PATH, 'Indian_pines.mat'))['indian_pines']\n",
+    "target_mat = scipy.io.loadmat(os.path.join(DATA_PATH, 'Indian_pines_gt.mat'))['indian_pines_gt']"
    ]
   },
   {
@@ -65,7 +67,7 @@
     "HEIGHT = input_mat.shape[0]\n",
     "WIDTH = input_mat.shape[1]\n",
     "BAND = input_mat.shape[2]\n",
-    "PATCH_SIZE = 37\n",
+    "PATCH_SIZE = 21\n",
     "TRAIN_PATCH,TRAIN_LABELS,TEST_PATCH,TEST_LABELS = [],[],[],[]\n",
     "CLASSES = [] \n",
     "COUNT = 200 #Number of patches of each class\n",
@@ -189,21 +191,21 @@
      "output_type": "stream",
      "text": [
       "46\n",
-      "1298\n",
-      "110\n",
-      "42\n",
-      "210\n",
+      "1378\n",
+      "547\n",
+      "152\n",
+      "340\n",
       "730\n",
       "28\n",
-      "147\n",
+      "356\n",
       "20\n",
-      "807\n",
-      "2081\n",
-      "260\n",
+      "843\n",
+      "2245\n",
+      "481\n",
       "205\n",
-      "663\n",
-      "81\n",
-      "62\n"
+      "1095\n",
+      "142\n",
+      "93\n"
      ]
     }
    ],
@@ -244,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -254,21 +256,21 @@
      "output_type": "stream",
      "text": [
       "35\n",
-      "974\n",
-      "83\n",
-      "32\n",
-      "158\n",
+      "1034\n",
+      "411\n",
+      "114\n",
+      "255\n",
       "548\n",
       "21\n",
-      "111\n",
+      "267\n",
       "15\n",
-      "606\n",
-      "1561\n",
-      "195\n",
+      "633\n",
+      "1684\n",
+      "361\n",
       "154\n",
-      "498\n",
-      "61\n",
-      "47\n"
+      "822\n",
+      "107\n",
+      "70\n"
      ]
     }
    ],
@@ -287,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -306,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -341,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -352,18 +354,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "TRAIN_PATCH = TRAIN_PATCH.reshape((-1,220,37,37))"
+    "TRAIN_PATCH = TRAIN_PATCH.reshape((-1,220,PATCH_SIZE,PATCH_SIZE))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -384,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -424,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -433,7 +435,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1691\n",
+      "2170\n",
       "3200\n"
      ]
     }
@@ -461,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -486,10 +488,10 @@
     "    train_dict = {}\n",
     "    start = i * (COUNT*2)\n",
     "    end = (i+1) * (COUNT*2)\n",
-    "    file_name = 'Train_15_'+str(i+1)+'.mat'\n",
+    "    file_name = 'Train_'+str(PATCH_SIZE)+'_'+str(i+1)+'.mat'\n",
     "    train_dict[\"train_patch\"] = TRAIN_PATCH[start:end]\n",
     "    train_dict[\"train_labels\"] = TRAIN_LABELS[start:end]\n",
-    "    scipy.io.savemat(file_name,train_dict)\n",
+    "    scipy.io.savemat(os.path.join(DATA_PATH, file_name),train_dict)\n",
     "    print i"
    ]
   },
@@ -503,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -513,15 +515,15 @@
     "    test_dict = {}\n",
     "    start = i * (COUNT*2)\n",
     "    end = (i+1) * (COUNT*2)\n",
-    "    file_name = 'Test_15_'+str(i+1)+'.mat'\n",
+    "    file_name = 'Test_'+str(PATCH_SIZE)+'_'+str(i+1)+'.mat'\n",
     "    test_dict[\"test_patch\"] = TEST_PATCH[start:end]\n",
     "    test_dict[\"test_labels\"] = TEST_LABELS[start:end]\n",
-    "    scipy.io.savemat(file_name,test_dict)"
+    "    scipy.io.savemat(os.path.join(DATA_PATH, file_name),test_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -529,10 +531,10 @@
     {
      "data": {
       "text/plain": [
-       "4"
+       "8"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
