--- a/convolutional_feed.ipynb
+++ b/convolutional_feed.ipynb
@@ -24,7 +24,7 @@
     "import numpy as np\n",
     "from six.moves import xrange  # pylint: disable=redefined-builtin\n",
     "import tensorflow as tf\n",
-    "\n",
+    "import os\n",
     "import IndianPinesTF \n",
     "# import IndianPines_data_set as input_data\n",
     "import Spatial_dataset as input_data"
@@ -56,7 +56,7 @@
     "flags.DEFINE_integer('hidden2', 84, 'Number of units in hidden layer 2.')\n",
     "flags.DEFINE_integer('batch_size', 100, 'Batch size.  '\n",
     "                     'Must divide evenly into the dataset sizes.')\n",
-    "flags.DEFINE_string('train_dir', '1.mat', 'Directory to put the training data.')"
+    "# flags.DEFINE_string('train_dir', '1.mat', 'Directory to put the training data.')"
    ]
   },
   {
@@ -68,14 +68,16 @@
    "outputs": [],
    "source": [
     "learning_rate = 0.01\n",
-    "max_steps = 2000\n",
+    "num_epochs = 20\n",
+    "max_steps = 4000\n",
     "IMAGE_SIZE = 21\n",
     "conv1 = 500\n",
     "conv2 = 100\n",
     "fc1 = 200,\n",
     "fc2 = 84\n",
     "batch_size = 100\n",
-    "train_dir = '1.mat'"
+    "# train_dir = '1.mat'\n",
+    "DATA_PATH = os.path.join(os.getcwd(),\"Data\")"
    ]
   },
   {
@@ -177,7 +179,7 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -203,7 +205,7 @@
     "    # Get the sets of images and labels for training, validation, and\n",
     "    # test on IndianPines.\n",
     "    for i in range(4):\n",
-    "        data_sets = input_data.read_data_sets('Train_10_'+str(i+1)+'.mat','train')\n",
+    "        data_sets = input_data.read_data_sets(os.path.join(DATA_PATH, 'Train_'+str(IMAGE_SIZE)+'_'+str(i+1)+'.mat'), 'train')\n",
     "        if(i==0):\n",
     "            Training_data = data_sets\n",
     "            continue\n",
@@ -211,7 +213,7 @@
     "            Training_data = add_DataSet(Training_data,data_sets)\n",
     "            \n",
     "    for i in range(2):\n",
-    "        data_sets = input_data.read_data_sets('Test_10_'+str(i+1)+'.mat','test')\n",
+    "        data_sets = input_data.read_data_sets(os.path.join(DATA_PATH, 'Test_'+str(IMAGE_SIZE)+'_'+str(i+1)+'.mat'),'test')\n",
     "        if(i==0):\n",
     "            Test_data = data_sets\n",
     "            continue\n",
@@ -290,7 +292,7 @@
     "\n",
     "            # Save a checkpoint and evaluate the model periodically.\n",
     "            if (step + 1) % 1000 == 0 or (step + 1) == FLAGS.max_steps:\n",
-    "                saver.save(sess, 'model-spatial-21X21.ckpt', global_step=step)\n",
+    "                saver.save(sess, 'model-spatial-'+str(IMAGE_SIZE)+'X'+str(IMAGE_SIZE)+'.ckpt', global_step=step)\n",
     "\n",
     "            # Evaluate against the training set.\n",
     "                print('Training Data Eval:')\n",
@@ -336,102 +338,102 @@
       "Tensor(\"h_conv2/h_conv2:0\", shape=(100, 8, 8, 100), dtype=float32)\n",
       "Tensor(\"h_pool2:0\", shape=(100, 4, 4, 100), dtype=float32)\n",
       "Tensor(\"Reshape:0\", shape=(100, 1600), dtype=float32)\n",
-      "Step 0: loss = 2.81 (0.618 sec)\n",
-      "Step 50: loss = 2.75 (0.290 sec)\n",
-      "Step 100: loss = 2.62 (0.275 sec)\n",
-      "Step 150: loss = 1.92 (0.284 sec)\n",
-      "Step 200: loss = 1.55 (0.271 sec)\n",
-      "Step 250: loss = 1.18 (0.274 sec)\n",
-      "Step 300: loss = 1.00 (0.297 sec)\n",
-      "Step 350: loss = 0.66 (0.287 sec)\n",
-      "Step 400: loss = 0.75 (0.285 sec)\n",
-      "Step 450: loss = 0.58 (0.271 sec)\n",
-      "Step 500: loss = 0.64 (0.280 sec)\n",
-      "Step 550: loss = 0.40 (0.274 sec)\n",
-      "Step 600: loss = 0.39 (0.273 sec)\n",
-      "Step 650: loss = 0.36 (0.292 sec)\n",
-      "Step 700: loss = 0.39 (0.280 sec)\n",
-      "Step 750: loss = 0.37 (0.284 sec)\n",
-      "Step 800: loss = 0.38 (5.728 sec)\n",
-      "Step 850: loss = 0.31 (0.274 sec)\n",
-      "Step 900: loss = 0.18 (0.272 sec)\n",
-      "Step 950: loss = 0.25 (0.273 sec)\n",
+      "Step 0: loss = 2.82 (0.604 sec)\n",
+      "Step 50: loss = 2.12 (0.292 sec)\n",
+      "Step 100: loss = 1.43 (0.275 sec)\n",
+      "Step 150: loss = 0.82 (0.293 sec)\n",
+      "Step 200: loss = 0.80 (0.280 sec)\n",
+      "Step 250: loss = 0.42 (0.279 sec)\n",
+      "Step 300: loss = 0.46 (0.278 sec)\n",
+      "Step 350: loss = 0.48 (0.278 sec)\n",
+      "Step 400: loss = 0.24 (0.784 sec)\n",
+      "Step 450: loss = 0.14 (0.280 sec)\n",
+      "Step 500: loss = 0.21 (0.289 sec)\n",
+      "Step 550: loss = 0.12 (0.278 sec)\n",
+      "Step 600: loss = 0.08 (0.287 sec)\n",
+      "Step 650: loss = 0.09 (0.275 sec)\n",
+      "Step 700: loss = 0.08 (0.291 sec)\n",
+      "Step 750: loss = 0.12 (0.278 sec)\n",
+      "Step 800: loss = 0.05 (0.786 sec)\n",
+      "Step 850: loss = 0.03 (0.292 sec)\n",
+      "Step 900: loss = 0.06 (0.276 sec)\n",
+      "Step 950: loss = 0.05 (0.272 sec)\n",
       "Training Data Eval:\n",
-      "  Num examples: 3200  Num correct: 2986  Precision @ 1: 0.9331\n",
+      "  Num examples: 1600  Num correct: 1591  Precision @ 1: 0.9944\n",
       "Test Data Eval:\n",
-      "  Num examples: 1600  Num correct: 1427  Precision @ 1: 0.8919\n",
-      "Step 1000: loss = 0.23 (0.369 sec)\n",
-      "Step 1050: loss = 0.12 (0.280 sec)\n",
-      "Step 1100: loss = 0.23 (0.280 sec)\n",
-      "Step 1150: loss = 0.16 (0.281 sec)\n",
-      "Step 1200: loss = 0.10 (0.282 sec)\n",
-      "Step 1250: loss = 0.08 (0.271 sec)\n",
-      "Step 1300: loss = 0.09 (0.272 sec)\n",
-      "Step 1350: loss = 0.05 (0.270 sec)\n",
-      "Step 1400: loss = 0.04 (0.272 sec)\n",
-      "Step 1450: loss = 0.08 (0.281 sec)\n",
-      "Step 1500: loss = 0.21 (0.270 sec)\n",
-      "Step 1550: loss = 0.03 (0.271 sec)\n",
-      "Step 1600: loss = 0.08 (4.835 sec)\n",
-      "Step 1650: loss = 0.04 (0.271 sec)\n",
-      "Step 1700: loss = 0.04 (0.271 sec)\n",
-      "Step 1750: loss = 0.06 (0.270 sec)\n",
-      "Step 1800: loss = 0.07 (0.263 sec)\n",
-      "Step 1850: loss = 0.04 (0.290 sec)\n",
-      "Step 1900: loss = 0.04 (0.271 sec)\n",
-      "Step 1950: loss = 0.03 (0.273 sec)\n",
+      "  Num examples: 800  Num correct: 765  Precision @ 1: 0.9563\n",
+      "Step 1000: loss = 0.03 (0.300 sec)\n",
+      "Step 1050: loss = 0.02 (0.278 sec)\n",
+      "Step 1100: loss = 0.03 (0.278 sec)\n",
+      "Step 1150: loss = 0.03 (0.271 sec)\n",
+      "Step 1200: loss = 0.01 (0.904 sec)\n",
+      "Step 1250: loss = 0.02 (0.269 sec)\n",
+      "Step 1300: loss = 0.01 (0.293 sec)\n",
+      "Step 1350: loss = 0.02 (0.279 sec)\n",
+      "Step 1400: loss = 0.01 (0.279 sec)\n",
+      "Step 1450: loss = 0.01 (0.293 sec)\n",
+      "Step 1500: loss = 0.01 (0.277 sec)\n",
+      "Step 1550: loss = 0.01 (0.278 sec)\n",
+      "Step 1600: loss = 0.01 (0.804 sec)\n",
+      "Step 1650: loss = 0.01 (0.294 sec)\n",
+      "Step 1700: loss = 0.01 (0.278 sec)\n",
+      "Step 1750: loss = 0.00 (0.294 sec)\n",
+      "Step 1800: loss = 0.01 (0.278 sec)\n",
+      "Step 1850: loss = 0.01 (0.288 sec)\n",
+      "Step 1900: loss = 0.00 (0.288 sec)\n",
+      "Step 1950: loss = 0.01 (0.293 sec)\n",
       "Training Data Eval:\n",
-      "  Num examples: 3200  Num correct: 3184  Precision @ 1: 0.9950\n",
+      "  Num examples: 1600  Num correct: 1600  Precision @ 1: 1.0000\n",
       "Test Data Eval:\n",
-      "  Num examples: 1600  Num correct: 1560  Precision @ 1: 0.9750\n",
-      "Step 2000: loss = 0.04 (0.354 sec)\n",
-      "Step 2050: loss = 0.02 (0.273 sec)\n",
-      "Step 2100: loss = 0.01 (0.273 sec)\n",
-      "Step 2150: loss = 0.02 (0.267 sec)\n",
-      "Step 2200: loss = 0.04 (0.286 sec)\n",
-      "Step 2250: loss = 0.02 (0.281 sec)\n",
-      "Step 2300: loss = 0.01 (0.275 sec)\n",
-      "Step 2350: loss = 0.01 (0.274 sec)\n",
-      "Step 2400: loss = 0.01 (3.219 sec)\n",
-      "Step 2450: loss = 0.01 (0.266 sec)\n",
-      "Step 2500: loss = 0.01 (0.271 sec)\n",
-      "Step 2550: loss = 0.01 (0.274 sec)\n",
-      "Step 2600: loss = 0.01 (0.271 sec)\n",
-      "Step 2650: loss = 0.02 (0.274 sec)\n",
-      "Step 2700: loss = 0.01 (0.271 sec)\n",
-      "Step 2750: loss = 0.01 (0.271 sec)\n",
-      "Step 2800: loss = 0.02 (0.271 sec)\n",
-      "Step 2850: loss = 0.01 (0.271 sec)\n",
-      "Step 2900: loss = 0.01 (0.281 sec)\n",
-      "Step 2950: loss = 0.01 (0.281 sec)\n",
+      "  Num examples: 800  Num correct: 784  Precision @ 1: 0.9800\n",
+      "Step 2000: loss = 0.01 (0.797 sec)\n",
+      "Step 2050: loss = 0.00 (0.293 sec)\n",
+      "Step 2100: loss = 0.01 (0.278 sec)\n",
+      "Step 2150: loss = 0.00 (0.276 sec)\n",
+      "Step 2200: loss = 0.00 (0.294 sec)\n",
+      "Step 2250: loss = 0.00 (0.278 sec)\n",
+      "Step 2300: loss = 0.00 (0.274 sec)\n",
+      "Step 2350: loss = 0.00 (0.273 sec)\n",
+      "Step 2400: loss = 0.00 (0.750 sec)\n",
+      "Step 2450: loss = 0.00 (0.278 sec)\n",
+      "Step 2500: loss = 0.00 (0.262 sec)\n",
+      "Step 2550: loss = 0.00 (0.263 sec)\n",
+      "Step 2600: loss = 0.00 (0.277 sec)\n",
+      "Step 2650: loss = 0.00 (0.260 sec)\n",
+      "Step 2700: loss = 0.00 (0.259 sec)\n",
+      "Step 2750: loss = 0.00 (0.262 sec)\n",
+      "Step 2800: loss = 0.00 (0.725 sec)\n",
+      "Step 2850: loss = 0.00 (0.258 sec)\n",
+      "Step 2900: loss = 0.00 (0.260 sec)\n",
+      "Step 2950: loss = 0.00 (0.262 sec)\n",
       "Training Data Eval:\n",
-      "  Num examples: 3200  Num correct: 3199  Precision @ 1: 0.9997\n",
+      "  Num examples: 1600  Num correct: 1600  Precision @ 1: 1.0000\n",
       "Test Data Eval:\n",
-      "  Num examples: 1600  Num correct: 1573  Precision @ 1: 0.9831\n",
-      "Step 3000: loss = 0.01 (0.357 sec)\n",
-      "Step 3050: loss = 0.01 (0.273 sec)\n",
-      "Step 3100: loss = 0.00 (0.272 sec)\n",
-      "Step 3150: loss = 0.03 (0.270 sec)\n",
-      "Step 3200: loss = 0.01 (2.881 sec)\n",
-      "Step 3250: loss = 0.01 (0.279 sec)\n",
-      "Step 3300: loss = 0.01 (0.281 sec)\n",
-      "Step 3350: loss = 0.01 (0.272 sec)\n",
-      "Step 3400: loss = 0.00 (0.271 sec)\n",
-      "Step 3450: loss = 0.00 (0.285 sec)\n",
-      "Step 3500: loss = 0.00 (0.281 sec)\n",
-      "Step 3550: loss = 0.01 (0.285 sec)\n",
-      "Step 3600: loss = 0.01 (0.270 sec)\n",
-      "Step 3650: loss = 0.00 (0.271 sec)\n",
-      "Step 3700: loss = 0.01 (0.275 sec)\n",
-      "Step 3750: loss = 0.00 (0.271 sec)\n",
-      "Step 3800: loss = 0.01 (0.270 sec)\n",
-      "Step 3850: loss = 0.00 (0.271 sec)\n",
-      "Step 3900: loss = 0.00 (0.270 sec)\n",
-      "Step 3950: loss = 0.00 (0.273 sec)\n",
+      "  Num examples: 800  Num correct: 785  Precision @ 1: 0.9812\n",
+      "Step 3000: loss = 0.00 (0.284 sec)\n",
+      "Step 3050: loss = 0.00 (0.262 sec)\n",
+      "Step 3100: loss = 0.00 (0.261 sec)\n",
+      "Step 3150: loss = 0.00 (0.267 sec)\n",
+      "Step 3200: loss = 0.00 (0.753 sec)\n",
+      "Step 3250: loss = 0.00 (0.262 sec)\n",
+      "Step 3300: loss = 0.00 (0.262 sec)\n",
+      "Step 3350: loss = 0.00 (0.262 sec)\n",
+      "Step 3400: loss = 0.00 (0.262 sec)\n",
+      "Step 3450: loss = 0.00 (0.262 sec)\n",
+      "Step 3500: loss = 0.00 (0.262 sec)\n",
+      "Step 3550: loss = 0.00 (0.262 sec)\n",
+      "Step 3600: loss = 0.00 (0.756 sec)\n",
+      "Step 3650: loss = 0.00 (0.262 sec)\n",
+      "Step 3700: loss = 0.00 (0.262 sec)\n",
+      "Step 3750: loss = 0.00 (0.262 sec)\n",
+      "Step 3800: loss = 0.00 (0.262 sec)\n",
+      "Step 3850: loss = 0.00 (0.261 sec)\n",
+      "Step 3900: loss = 0.00 (0.262 sec)\n",
+      "Step 3950: loss = 0.00 (0.262 sec)\n",
       "Training Data Eval:\n",
-      "  Num examples: 3200  Num correct: 3199  Precision @ 1: 0.9997\n",
+      "  Num examples: 1600  Num correct: 1600  Precision @ 1: 1.0000\n",
       "Test Data Eval:\n",
-      "  Num examples: 1600  Num correct: 1578  Precision @ 1: 0.9862\n"
+      "  Num examples: 800  Num correct: 786  Precision @ 1: 0.9825\n"
      ]
     }
    ],
