--- a/IndianPinesTF.ipynb
+++ b/IndianPinesTF.ipynb
@@ -27,7 +27,7 @@
     "from __future__ import print_function\n",
     "\n",
     "import math\n",
-    "\n",
+    "import  patch_size\n",
     "import tensorflow as tf"
    ]
   },
@@ -44,7 +44,7 @@
     "\n",
     "# We have chopped the IndianPines image into 28x28 pixels patches. \n",
     "# We will classify each patch\n",
-    "IMAGE_SIZE = 21\n",
+    "IMAGE_SIZE = patch_size.patch_size\n",
     "IMAGE_PIXELS = IMAGE_SIZE * IMAGE_SIZE *220"
    ]
   },
