--- a/Decoder_Spatial.ipynb
+++ b/Decoder_Spatial.ipynb
@@ -23,6 +23,7 @@
     "#import seaborn as sns\n",
     "from collections import Counter\n",
     "import Spatial_dataset as input_data\n",
+    "import patch_size\n",
     "import os\n",
     "#print IndianPinesTF.IMAGE_PIXELS"
    ]
@@ -45,7 +46,7 @@
     "# output_image = np.rot90(output_image)\n",
     "height = output_image.shape[0]\n",
     "width = output_image.shape[1]\n",
-    "PATCH_SIZE = 21\n",
+    "PATCH_SIZE = patch_size.patch_size\n",
     "batch_size = 100\n",
     "num_examples = 800\n",
     "\n",
