--- a/IndianPines_DataSet_Preparation_Without_Augmentation.ipynb
+++ b/IndianPines_DataSet_Preparation_Without_Augmentation.ipynb
@@ -24,6 +24,7 @@
     "import scipy.ndimage\n",
     "from skimage.transform import rotate\n",
     "import os\n",
+    "import patch_size\n",
     "%matplotlib inline"
    ]
   },
@@ -67,12 +68,34 @@
     "HEIGHT = input_mat.shape[0]\n",
     "WIDTH = input_mat.shape[1]\n",
     "BAND = input_mat.shape[2]\n",
-    "PATCH_SIZE = 21\n",
+    "PATCH_SIZE = patch_size.patch_size\n",
     "TRAIN_PATCH,TRAIN_LABELS,TEST_PATCH,TEST_LABELS = [],[],[],[]\n",
     "CLASSES = [] \n",
     "COUNT = 200 #Number of patches of each class\n",
     "OUTPUT_CLASSES = 16\n",
     "TEST_FRAC = 0.25 #Fraction of data to be used for testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "PATCH_SIZE"
    ]
   },
   {
@@ -87,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -108,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -121,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -163,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -181,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -191,20 +214,20 @@
      "output_type": "stream",
      "text": [
       "46\n",
-      "1378\n",
-      "547\n",
-      "152\n",
-      "340\n",
+      "1428\n",
+      "685\n",
+      "221\n",
+      "423\n",
       "730\n",
       "28\n",
-      "356\n",
+      "478\n",
       "20\n",
-      "843\n",
-      "2245\n",
-      "481\n",
+      "924\n",
+      "2350\n",
+      "561\n",
       "205\n",
-      "1095\n",
-      "142\n",
+      "1265\n",
+      "265\n",
       "93\n"
      ]
     }
@@ -224,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -246,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -256,20 +279,20 @@
      "output_type": "stream",
      "text": [
       "35\n",
-      "1034\n",
-      "411\n",
-      "114\n",
-      "255\n",
+      "1071\n",
+      "514\n",
+      "166\n",
+      "318\n",
       "548\n",
       "21\n",
-      "267\n",
+      "359\n",
       "15\n",
-      "633\n",
-      "1684\n",
-      "361\n",
+      "693\n",
+      "1763\n",
+      "421\n",
       "154\n",
-      "822\n",
-      "107\n",
+      "949\n",
+      "199\n",
       "70\n"
      ]
     }
@@ -289,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -308,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -343,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -354,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -365,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -386,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -426,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -435,7 +458,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2170\n",
+      "2426\n",
       "3200\n"
      ]
     }
@@ -463,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -505,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -523,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -534,7 +557,7 @@
        "8"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
