--- a/convolutional_feed.ipynb
+++ b/convolutional_feed.ipynb
@@ -26,6 +26,7 @@
     "import tensorflow as tf\n",
     "import os\n",
     "import IndianPinesTF \n",
+    "import patch_size\n",
     "# import IndianPines_data_set as input_data\n",
     "import Spatial_dataset as input_data"
    ]
@@ -70,7 +71,7 @@
     "learning_rate = 0.01\n",
     "num_epochs = 20\n",
     "max_steps = 4000\n",
-    "IMAGE_SIZE = 21\n",
+    "IMAGE_SIZE = patch_size.patch_size\n",
     "conv1 = 500\n",
     "conv2 = 100\n",
     "fc1 = 200,\n",
@@ -334,106 +335,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tensor(\"conv_1/Conv2D:0\", shape=(100, 19, 19, 500), dtype=float32)\n",
-      "Tensor(\"h_conv2/h_conv2:0\", shape=(100, 8, 8, 100), dtype=float32)\n",
-      "Tensor(\"h_pool2:0\", shape=(100, 4, 4, 100), dtype=float32)\n",
-      "Tensor(\"Reshape:0\", shape=(100, 1600), dtype=float32)\n",
-      "Step 0: loss = 2.82 (0.604 sec)\n",
-      "Step 50: loss = 2.12 (0.292 sec)\n",
-      "Step 100: loss = 1.43 (0.275 sec)\n",
-      "Step 150: loss = 0.82 (0.293 sec)\n",
-      "Step 200: loss = 0.80 (0.280 sec)\n",
-      "Step 250: loss = 0.42 (0.279 sec)\n",
-      "Step 300: loss = 0.46 (0.278 sec)\n",
-      "Step 350: loss = 0.48 (0.278 sec)\n",
-      "Step 400: loss = 0.24 (0.784 sec)\n",
-      "Step 450: loss = 0.14 (0.280 sec)\n",
-      "Step 500: loss = 0.21 (0.289 sec)\n",
-      "Step 550: loss = 0.12 (0.278 sec)\n",
-      "Step 600: loss = 0.08 (0.287 sec)\n",
-      "Step 650: loss = 0.09 (0.275 sec)\n",
-      "Step 700: loss = 0.08 (0.291 sec)\n",
-      "Step 750: loss = 0.12 (0.278 sec)\n",
-      "Step 800: loss = 0.05 (0.786 sec)\n",
-      "Step 850: loss = 0.03 (0.292 sec)\n",
-      "Step 900: loss = 0.06 (0.276 sec)\n",
-      "Step 950: loss = 0.05 (0.272 sec)\n",
-      "Training Data Eval:\n",
-      "  Num examples: 1600  Num correct: 1591  Precision @ 1: 0.9944\n",
-      "Test Data Eval:\n",
-      "  Num examples: 800  Num correct: 765  Precision @ 1: 0.9563\n",
-      "Step 1000: loss = 0.03 (0.300 sec)\n",
-      "Step 1050: loss = 0.02 (0.278 sec)\n",
-      "Step 1100: loss = 0.03 (0.278 sec)\n",
-      "Step 1150: loss = 0.03 (0.271 sec)\n",
-      "Step 1200: loss = 0.01 (0.904 sec)\n",
-      "Step 1250: loss = 0.02 (0.269 sec)\n",
-      "Step 1300: loss = 0.01 (0.293 sec)\n",
-      "Step 1350: loss = 0.02 (0.279 sec)\n",
-      "Step 1400: loss = 0.01 (0.279 sec)\n",
-      "Step 1450: loss = 0.01 (0.293 sec)\n",
-      "Step 1500: loss = 0.01 (0.277 sec)\n",
-      "Step 1550: loss = 0.01 (0.278 sec)\n",
-      "Step 1600: loss = 0.01 (0.804 sec)\n",
-      "Step 1650: loss = 0.01 (0.294 sec)\n",
-      "Step 1700: loss = 0.01 (0.278 sec)\n",
-      "Step 1750: loss = 0.00 (0.294 sec)\n",
-      "Step 1800: loss = 0.01 (0.278 sec)\n",
-      "Step 1850: loss = 0.01 (0.288 sec)\n",
-      "Step 1900: loss = 0.00 (0.288 sec)\n",
-      "Step 1950: loss = 0.01 (0.293 sec)\n",
-      "Training Data Eval:\n",
-      "  Num examples: 1600  Num correct: 1600  Precision @ 1: 1.0000\n",
-      "Test Data Eval:\n",
-      "  Num examples: 800  Num correct: 784  Precision @ 1: 0.9800\n",
-      "Step 2000: loss = 0.01 (0.797 sec)\n",
-      "Step 2050: loss = 0.00 (0.293 sec)\n",
-      "Step 2100: loss = 0.01 (0.278 sec)\n",
-      "Step 2150: loss = 0.00 (0.276 sec)\n",
-      "Step 2200: loss = 0.00 (0.294 sec)\n",
-      "Step 2250: loss = 0.00 (0.278 sec)\n",
-      "Step 2300: loss = 0.00 (0.274 sec)\n",
-      "Step 2350: loss = 0.00 (0.273 sec)\n",
-      "Step 2400: loss = 0.00 (0.750 sec)\n",
-      "Step 2450: loss = 0.00 (0.278 sec)\n",
-      "Step 2500: loss = 0.00 (0.262 sec)\n",
-      "Step 2550: loss = 0.00 (0.263 sec)\n",
-      "Step 2600: loss = 0.00 (0.277 sec)\n",
-      "Step 2650: loss = 0.00 (0.260 sec)\n",
-      "Step 2700: loss = 0.00 (0.259 sec)\n",
-      "Step 2750: loss = 0.00 (0.262 sec)\n",
-      "Step 2800: loss = 0.00 (0.725 sec)\n",
-      "Step 2850: loss = 0.00 (0.258 sec)\n",
-      "Step 2900: loss = 0.00 (0.260 sec)\n",
-      "Step 2950: loss = 0.00 (0.262 sec)\n",
-      "Training Data Eval:\n",
-      "  Num examples: 1600  Num correct: 1600  Precision @ 1: 1.0000\n",
-      "Test Data Eval:\n",
-      "  Num examples: 800  Num correct: 785  Precision @ 1: 0.9812\n",
-      "Step 3000: loss = 0.00 (0.284 sec)\n",
-      "Step 3050: loss = 0.00 (0.262 sec)\n",
-      "Step 3100: loss = 0.00 (0.261 sec)\n",
-      "Step 3150: loss = 0.00 (0.267 sec)\n",
-      "Step 3200: loss = 0.00 (0.753 sec)\n",
-      "Step 3250: loss = 0.00 (0.262 sec)\n",
-      "Step 3300: loss = 0.00 (0.262 sec)\n",
-      "Step 3350: loss = 0.00 (0.262 sec)\n",
-      "Step 3400: loss = 0.00 (0.262 sec)\n",
-      "Step 3450: loss = 0.00 (0.262 sec)\n",
-      "Step 3500: loss = 0.00 (0.262 sec)\n",
-      "Step 3550: loss = 0.00 (0.262 sec)\n",
-      "Step 3600: loss = 0.00 (0.756 sec)\n",
-      "Step 3650: loss = 0.00 (0.262 sec)\n",
-      "Step 3700: loss = 0.00 (0.262 sec)\n",
-      "Step 3750: loss = 0.00 (0.262 sec)\n",
-      "Step 3800: loss = 0.00 (0.262 sec)\n",
-      "Step 3850: loss = 0.00 (0.261 sec)\n",
-      "Step 3900: loss = 0.00 (0.262 sec)\n",
-      "Step 3950: loss = 0.00 (0.262 sec)\n",
-      "Training Data Eval:\n",
-      "  Num examples: 1600  Num correct: 1600  Precision @ 1: 1.0000\n",
-      "Test Data Eval:\n",
-      "  Num examples: 800  Num correct: 786  Precision @ 1: 0.9825\n"
+      "Tensor(\"conv_1/Conv2D:0\", shape=(100, 3, 3, 500), dtype=float32)\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "filter must not be larger than the input: Filter: [3x3] Input: [2x2]",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-0683f80cdbe4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrun_training\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-8-0014c05ec4a4>\u001b[0m in \u001b[0;36mrun_training\u001b[1;34m()\u001b[0m\n\u001b[0;32m     29\u001b[0m                                  \u001b[0mFLAGS\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconv2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m                                  \u001b[0mFLAGS\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhidden1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 31\u001b[1;33m                                  FLAGS.hidden2)\n\u001b[0m\u001b[0;32m     32\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     33\u001b[0m         \u001b[1;31m# Add to the Graph the Ops for loss calculation.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/users/TeamISRO/Hyperspectral/LandcoverClassification_BaselineEvaluation/DeliveredCode/Hyperspectral/IndianPinesTF.py\u001b[0m in \u001b[0;36minference\u001b[1;34m(images, conv1_channels, conv2_channels, fc1_units, fc2_units)\u001b[0m\n\u001b[0;32m     81\u001b[0m                                   initializer=tf.contrib.layers.xavier_initializer_conv2d())\n\u001b[0;32m     82\u001b[0m         \u001b[0mbiases\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_variable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'biases'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mshape\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mconv2_channels\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0minitializer\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconstant_initializer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0.05\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 83\u001b[1;33m         \u001b[0mz\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconv2d\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mh_pool1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mweights\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstrides\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpadding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'VALID'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     84\u001b[0m         \u001b[0mh_conv2\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrelu\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mz\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mbiases\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mname\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mscope\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     85\u001b[0m         \u001b[1;32mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mh_conv2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/tensorflow/python/ops/gen_nn_ops.pyc\u001b[0m in \u001b[0;36mconv2d\u001b[1;34m(input, filter, strides, padding, use_cudnn_on_gpu, data_format, name)\u001b[0m\n\u001b[0;32m    293\u001b[0m                               \u001b[0mstrides\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstrides\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpadding\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mpadding\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    294\u001b[0m                               \u001b[0muse_cudnn_on_gpu\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0muse_cudnn_on_gpu\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 295\u001b[1;33m                               data_format=data_format, name=name)\n\u001b[0m\u001b[0;32m    296\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    297\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/tensorflow/python/ops/op_def_library.pyc\u001b[0m in \u001b[0;36mapply_op\u001b[1;34m(self, op_type_name, name, **keywords)\u001b[0m\n\u001b[0;32m    653\u001b[0m         op = g.create_op(op_type_name, inputs, output_types, name=scope,\n\u001b[0;32m    654\u001b[0m                          \u001b[0minput_types\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minput_types\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mattrs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mattr_protos\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 655\u001b[1;33m                          op_def=op_def)\n\u001b[0m\u001b[0;32m    656\u001b[0m         \u001b[0moutputs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mop\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    657\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0m_Restructure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mops\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconvert_n_to_tensor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moutput_structure\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/tensorflow/python/framework/ops.pyc\u001b[0m in \u001b[0;36mcreate_op\u001b[1;34m(self, op_type, inputs, dtypes, input_types, name, attrs, op_def, compute_shapes, compute_device)\u001b[0m\n\u001b[0;32m   2154\u001b[0m                     original_op=self._default_original_op, op_def=op_def)\n\u001b[0;32m   2155\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mcompute_shapes\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2156\u001b[1;33m       \u001b[0mset_shapes_for_outputs\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mret\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2157\u001b[0m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_add_op\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mret\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2158\u001b[0m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_record_op_seen_by_control_dependencies\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mret\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/tensorflow/python/framework/ops.pyc\u001b[0m in \u001b[0;36mset_shapes_for_outputs\u001b[1;34m(op)\u001b[0m\n\u001b[0;32m   1610\u001b[0m       raise RuntimeError(\"No shape function registered for standard op: %s\"\n\u001b[0;32m   1611\u001b[0m                          % op.type)\n\u001b[1;32m-> 1612\u001b[1;33m   \u001b[0mshapes\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mshape_func\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mop\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1613\u001b[0m   \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mop\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshapes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1614\u001b[0m     raise RuntimeError(\n",
+      "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/tensorflow/python/ops/common_shapes.pyc\u001b[0m in \u001b[0;36mconv2d_shape\u001b[1;34m(op)\u001b[0m\n\u001b[0;32m    236\u001b[0m   \u001b[0mpadding\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mop\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mget_attr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"padding\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    237\u001b[0m   out_rows, out_cols = get2d_conv_output_size(\n\u001b[1;32m--> 238\u001b[1;33m       in_rows, in_cols, filter_rows, filter_cols, stride_r, stride_c, padding)\n\u001b[0m\u001b[0;32m    239\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    240\u001b[0m   \u001b[0moutput_shape\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mout_rows\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mout_cols\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdepth_out\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/usr/local/lib/python2.7/dist-packages/tensorflow/python/ops/common_shapes.pyc\u001b[0m in \u001b[0;36mget2d_conv_output_size\u001b[1;34m(input_height, input_width, filter_height, filter_width, row_stride, col_stride, padding_type)\u001b[0m\n\u001b[0;32m    149\u001b[0m           \u001b[1;34m\"filter must not be larger than the input: \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    150\u001b[0m           \u001b[1;34m\"Filter: [%sx%s] Input: [%sx%s]\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 151\u001b[1;33m           % (filter_height, filter_width, input_height, input_width))\n\u001b[0m\u001b[0;32m    152\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mrow_stride\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mfilter_height\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mcol_stride\u001b[0m \u001b[1;33m>\u001b[0m \u001b[0mfilter_width\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    153\u001b[0m       raise ValueError(\"stride must be less than or equal to filter size\",\n",
+      "\u001b[1;31mValueError\u001b[0m: filter must not be larger than the input: Filter: [3x3] Input: [2x2]"
      ]
     }
    ],
