--- a/convolutional_feed.ipynb
+++ b/convolutional_feed.ipynb
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -350,7 +350,91 @@
       "Step 400: loss = 0.36 (0.246 sec)\n",
       "Step 450: loss = 0.39 (0.096 sec)\n",
       "Step 500: loss = 0.37 (0.095 sec)\n",
-      "Step 550: loss = 0.38 (0.095 sec)\n"
+      "Step 550: loss = 0.38 (0.095 sec)\n",
+      "Step 600: loss = 0.22 (0.095 sec)\n",
+      "Step 650: loss = 0.21 (0.095 sec)\n",
+      "Step 700: loss = 0.26 (0.096 sec)\n",
+      "Step 750: loss = 0.25 (0.096 sec)\n",
+      "Step 800: loss = 0.24 (0.233 sec)\n",
+      "Step 850: loss = 0.23 (0.096 sec)\n",
+      "Step 900: loss = 0.16 (0.096 sec)\n",
+      "Step 950: loss = 0.16 (0.095 sec)\n",
+      "Training Data Eval:\n",
+      "  Num examples: 1600  Num correct: 1507  Precision @ 1: 0.9419\n",
+      "Test Data Eval:\n",
+      "  Num examples: 800  Num correct: 699  Precision @ 1: 0.8738\n",
+      "Step 1000: loss = 0.15 (0.094 sec)\n",
+      "Step 1050: loss = 0.09 (0.087 sec)\n",
+      "Step 1100: loss = 0.20 (0.084 sec)\n",
+      "Step 1150: loss = 0.14 (0.087 sec)\n",
+      "Step 1200: loss = 0.12 (0.242 sec)\n",
+      "Step 1250: loss = 0.12 (0.085 sec)\n",
+      "Step 1300: loss = 0.11 (0.086 sec)\n",
+      "Step 1350: loss = 0.15 (0.087 sec)\n",
+      "Step 1400: loss = 0.11 (0.088 sec)\n",
+      "Step 1450: loss = 0.18 (0.090 sec)\n",
+      "Step 1500: loss = 0.07 (0.087 sec)\n",
+      "Step 1550: loss = 0.11 (0.086 sec)\n",
+      "Step 1600: loss = 0.14 (0.241 sec)\n",
+      "Step 1650: loss = 0.09 (0.087 sec)\n",
+      "Step 1700: loss = 0.18 (0.088 sec)\n",
+      "Step 1750: loss = 0.07 (0.089 sec)\n",
+      "Step 1800: loss = 0.10 (0.087 sec)\n",
+      "Step 1850: loss = 0.06 (0.087 sec)\n",
+      "Step 1900: loss = 0.06 (0.086 sec)\n",
+      "Step 1950: loss = 0.05 (0.088 sec)\n",
+      "Training Data Eval:\n",
+      "  Num examples: 1600  Num correct: 1571  Precision @ 1: 0.9819\n",
+      "Test Data Eval:\n",
+      "  Num examples: 800  Num correct: 750  Precision @ 1: 0.9375\n",
+      "Step 2000: loss = 0.07 (0.251 sec)\n",
+      "Step 2050: loss = 0.08 (0.089 sec)\n",
+      "Step 2100: loss = 0.07 (0.079 sec)\n",
+      "Step 2150: loss = 0.04 (0.087 sec)\n",
+      "Step 2200: loss = 0.06 (0.088 sec)\n",
+      "Step 2250: loss = 0.03 (0.087 sec)\n",
+      "Step 2300: loss = 0.10 (0.087 sec)\n",
+      "Step 2350: loss = 0.02 (0.087 sec)\n",
+      "Step 2400: loss = 0.03 (0.237 sec)\n",
+      "Step 2450: loss = 0.02 (0.087 sec)\n",
+      "Step 2500: loss = 0.04 (0.089 sec)\n",
+      "Step 2550: loss = 0.02 (0.087 sec)\n",
+      "Step 2600: loss = 0.06 (0.083 sec)\n",
+      "Step 2650: loss = 0.03 (0.087 sec)\n",
+      "Step 2700: loss = 0.02 (0.088 sec)\n",
+      "Step 2750: loss = 0.02 (0.084 sec)\n",
+      "Step 2800: loss = 0.20 (0.204 sec)\n",
+      "Step 2850: loss = 0.02 (0.088 sec)\n",
+      "Step 2900: loss = 0.02 (0.087 sec)\n",
+      "Step 2950: loss = 0.02 (0.087 sec)\n",
+      "Training Data Eval:\n",
+      "  Num examples: 1600  Num correct: 1598  Precision @ 1: 0.9988\n",
+      "Test Data Eval:\n",
+      "  Num examples: 800  Num correct: 789  Precision @ 1: 0.9862\n",
+      "Step 3000: loss = 0.01 (0.093 sec)\n",
+      "Step 3050: loss = 0.03 (0.088 sec)\n",
+      "Step 3100: loss = 0.01 (0.088 sec)\n",
+      "Step 3150: loss = 0.01 (0.088 sec)\n",
+      "Step 3200: loss = 0.01 (0.240 sec)\n",
+      "Step 3250: loss = 0.01 (0.089 sec)\n",
+      "Step 3300: loss = 0.01 (0.087 sec)\n",
+      "Step 3350: loss = 0.02 (0.087 sec)\n",
+      "Step 3400: loss = 0.01 (0.090 sec)\n",
+      "Step 3450: loss = 0.01 (0.088 sec)\n",
+      "Step 3500: loss = 0.01 (0.084 sec)\n",
+      "Step 3550: loss = 0.01 (0.081 sec)\n",
+      "Step 3600: loss = 0.01 (0.241 sec)\n",
+      "Step 3650: loss = 0.01 (0.088 sec)\n",
+      "Step 3700: loss = 0.01 (0.084 sec)\n",
+      "Step 3750: loss = 0.01 (0.087 sec)\n",
+      "Step 3800: loss = 0.00 (0.088 sec)\n",
+      "Step 3850: loss = 0.01 (0.084 sec)\n",
+      "Step 3900: loss = 0.00 (0.084 sec)\n",
+      "Step 3950: loss = 0.01 (0.088 sec)\n",
+      "Training Data Eval:\n",
+      "  Num examples: 1600  Num correct: 1600  Precision @ 1: 1.0000\n",
+      "Test Data Eval:\n",
+      "  Num examples: 800  Num correct: 792  Precision @ 1: 0.9900\n"
      ]
     }
    ],
