--- a/convolutional_feed.ipynb
+++ b/convolutional_feed.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -77,7 +77,8 @@
     "fc1 = 200,\n",
     "fc2 = 84\n",
     "batch_size = 100\n",
-    "# train_dir = '1.mat'\n",
+    "TRAIN_FILES = 8\n",
+    "TEST_FILES = 4\n",
     "DATA_PATH = os.path.join(os.getcwd(),\"Data\")"
    ]
   },
@@ -205,7 +206,9 @@
     "    \"\"\"Train MNIST for a number of steps.\"\"\"\n",
     "    # Get the sets of images and labels for training, validation, and\n",
     "    # test on IndianPines.\n",
-    "    for i in range(4):\n",
+    "    \n",
+    "    \"\"\"Concatenating all the training and test mat files\"\"\"\n",
+    "    for i in range(TRAIN_FILES):\n",
     "        data_sets = input_data.read_data_sets(os.path.join(DATA_PATH, 'Train_'+str(IMAGE_SIZE)+'_'+str(i+1)+'.mat'), 'train')\n",
     "        if(i==0):\n",
     "            Training_data = data_sets\n",
@@ -213,7 +216,7 @@
     "        else:\n",
     "            Training_data = add_DataSet(Training_data,data_sets)\n",
     "            \n",
-    "    for i in range(2):\n",
+    "    for i in range(TEST_FILES):\n",
     "        data_sets = input_data.read_data_sets(os.path.join(DATA_PATH, 'Test_'+str(IMAGE_SIZE)+'_'+str(i+1)+'.mat'),'test')\n",
     "        if(i==0):\n",
     "            Test_data = data_sets\n",
@@ -339,102 +342,102 @@
       "Tensor(\"h_conv2/h_conv2:0\", shape=(100, 3, 3, 100), dtype=float32)\n",
       "Tensor(\"h_pool2:0\", shape=(100, 2, 2, 100), dtype=float32)\n",
       "Tensor(\"Reshape:0\", shape=(100, 400), dtype=float32)\n",
-      "Step 0: loss = 2.72 (0.398 sec)\n",
-      "Step 50: loss = 2.20 (0.096 sec)\n",
-      "Step 100: loss = 1.47 (0.095 sec)\n",
-      "Step 150: loss = 1.28 (0.096 sec)\n",
-      "Step 200: loss = 1.09 (0.095 sec)\n",
-      "Step 250: loss = 1.01 (0.097 sec)\n",
-      "Step 300: loss = 0.57 (0.095 sec)\n",
-      "Step 350: loss = 0.48 (0.095 sec)\n",
-      "Step 400: loss = 0.36 (0.246 sec)\n",
-      "Step 450: loss = 0.39 (0.096 sec)\n",
-      "Step 500: loss = 0.37 (0.095 sec)\n",
-      "Step 550: loss = 0.38 (0.095 sec)\n",
-      "Step 600: loss = 0.22 (0.095 sec)\n",
-      "Step 650: loss = 0.21 (0.095 sec)\n",
-      "Step 700: loss = 0.26 (0.096 sec)\n",
-      "Step 750: loss = 0.25 (0.096 sec)\n",
-      "Step 800: loss = 0.24 (0.233 sec)\n",
-      "Step 850: loss = 0.23 (0.096 sec)\n",
-      "Step 900: loss = 0.16 (0.096 sec)\n",
-      "Step 950: loss = 0.16 (0.095 sec)\n",
+      "Step 0: loss = 2.79 (0.417 sec)\n",
+      "Step 50: loss = 2.73 (0.096 sec)\n",
+      "Step 100: loss = 2.57 (0.084 sec)\n",
+      "Step 150: loss = 2.14 (0.085 sec)\n",
+      "Step 200: loss = 1.84 (0.096 sec)\n",
+      "Step 250: loss = 1.58 (0.084 sec)\n",
+      "Step 300: loss = 1.28 (0.084 sec)\n",
+      "Step 350: loss = 1.21 (0.085 sec)\n",
+      "Step 400: loss = 0.84 (0.085 sec)\n",
+      "Step 450: loss = 1.04 (0.084 sec)\n",
+      "Step 500: loss = 0.75 (0.084 sec)\n",
+      "Step 550: loss = 0.83 (0.085 sec)\n",
+      "Step 600: loss = 0.73 (0.084 sec)\n",
+      "Step 650: loss = 0.72 (0.085 sec)\n",
+      "Step 700: loss = 0.72 (0.085 sec)\n",
+      "Step 750: loss = 0.61 (0.084 sec)\n",
+      "Step 800: loss = 0.56 (0.347 sec)\n",
+      "Step 850: loss = 0.59 (0.084 sec)\n",
+      "Step 900: loss = 0.51 (0.084 sec)\n",
+      "Step 950: loss = 0.51 (0.084 sec)\n",
       "Training Data Eval:\n",
-      "  Num examples: 1600  Num correct: 1507  Precision @ 1: 0.9419\n",
+      "  Num examples: 3200  Num correct: 2558  Precision @ 1: 0.7994\n",
       "Test Data Eval:\n",
-      "  Num examples: 800  Num correct: 699  Precision @ 1: 0.8738\n",
-      "Step 1000: loss = 0.15 (0.094 sec)\n",
-      "Step 1050: loss = 0.09 (0.087 sec)\n",
-      "Step 1100: loss = 0.20 (0.084 sec)\n",
-      "Step 1150: loss = 0.14 (0.087 sec)\n",
-      "Step 1200: loss = 0.12 (0.242 sec)\n",
-      "Step 1250: loss = 0.12 (0.085 sec)\n",
-      "Step 1300: loss = 0.11 (0.086 sec)\n",
-      "Step 1350: loss = 0.15 (0.087 sec)\n",
-      "Step 1400: loss = 0.11 (0.088 sec)\n",
-      "Step 1450: loss = 0.18 (0.090 sec)\n",
-      "Step 1500: loss = 0.07 (0.087 sec)\n",
-      "Step 1550: loss = 0.11 (0.086 sec)\n",
-      "Step 1600: loss = 0.14 (0.241 sec)\n",
-      "Step 1650: loss = 0.09 (0.087 sec)\n",
-      "Step 1700: loss = 0.18 (0.088 sec)\n",
-      "Step 1750: loss = 0.07 (0.089 sec)\n",
-      "Step 1800: loss = 0.10 (0.087 sec)\n",
-      "Step 1850: loss = 0.06 (0.087 sec)\n",
-      "Step 1900: loss = 0.06 (0.086 sec)\n",
-      "Step 1950: loss = 0.05 (0.088 sec)\n",
+      "  Num examples: 1600  Num correct: 851  Precision @ 1: 0.5319\n",
+      "Step 1000: loss = 0.50 (0.088 sec)\n",
+      "Step 1050: loss = 0.57 (0.080 sec)\n",
+      "Step 1100: loss = 0.52 (0.079 sec)\n",
+      "Step 1150: loss = 0.45 (0.080 sec)\n",
+      "Step 1200: loss = 0.43 (0.080 sec)\n",
+      "Step 1250: loss = 0.47 (0.080 sec)\n",
+      "Step 1300: loss = 0.46 (0.080 sec)\n",
+      "Step 1350: loss = 0.32 (0.080 sec)\n",
+      "Step 1400: loss = 0.34 (0.081 sec)\n",
+      "Step 1450: loss = 0.45 (0.080 sec)\n",
+      "Step 1500: loss = 0.35 (0.080 sec)\n",
+      "Step 1550: loss = 0.37 (0.079 sec)\n",
+      "Step 1600: loss = 0.30 (0.339 sec)\n",
+      "Step 1650: loss = 0.46 (0.080 sec)\n",
+      "Step 1700: loss = 0.29 (0.080 sec)\n",
+      "Step 1750: loss = 0.29 (0.080 sec)\n",
+      "Step 1800: loss = 0.28 (0.080 sec)\n",
+      "Step 1850: loss = 0.23 (0.080 sec)\n",
+      "Step 1900: loss = 0.34 (0.079 sec)\n",
+      "Step 1950: loss = 0.26 (0.080 sec)\n",
       "Training Data Eval:\n",
-      "  Num examples: 1600  Num correct: 1571  Precision @ 1: 0.9819\n",
+      "  Num examples: 3200  Num correct: 2982  Precision @ 1: 0.9319\n",
       "Test Data Eval:\n",
-      "  Num examples: 800  Num correct: 750  Precision @ 1: 0.9375\n",
-      "Step 2000: loss = 0.07 (0.251 sec)\n",
-      "Step 2050: loss = 0.08 (0.089 sec)\n",
-      "Step 2100: loss = 0.07 (0.079 sec)\n",
-      "Step 2150: loss = 0.04 (0.087 sec)\n",
-      "Step 2200: loss = 0.06 (0.088 sec)\n",
-      "Step 2250: loss = 0.03 (0.087 sec)\n",
-      "Step 2300: loss = 0.10 (0.087 sec)\n",
-      "Step 2350: loss = 0.02 (0.087 sec)\n",
-      "Step 2400: loss = 0.03 (0.237 sec)\n",
-      "Step 2450: loss = 0.02 (0.087 sec)\n",
-      "Step 2500: loss = 0.04 (0.089 sec)\n",
-      "Step 2550: loss = 0.02 (0.087 sec)\n",
-      "Step 2600: loss = 0.06 (0.083 sec)\n",
-      "Step 2650: loss = 0.03 (0.087 sec)\n",
-      "Step 2700: loss = 0.02 (0.088 sec)\n",
-      "Step 2750: loss = 0.02 (0.084 sec)\n",
-      "Step 2800: loss = 0.20 (0.204 sec)\n",
-      "Step 2850: loss = 0.02 (0.088 sec)\n",
-      "Step 2900: loss = 0.02 (0.087 sec)\n",
-      "Step 2950: loss = 0.02 (0.087 sec)\n",
+      "  Num examples: 1600  Num correct: 1183  Precision @ 1: 0.7394\n",
+      "Step 2000: loss = 0.24 (0.087 sec)\n",
+      "Step 2050: loss = 0.20 (0.079 sec)\n",
+      "Step 2100: loss = 0.32 (0.080 sec)\n",
+      "Step 2150: loss = 0.26 (0.080 sec)\n",
+      "Step 2200: loss = 0.32 (0.080 sec)\n",
+      "Step 2250: loss = 0.14 (0.080 sec)\n",
+      "Step 2300: loss = 0.16 (0.080 sec)\n",
+      "Step 2350: loss = 0.16 (0.080 sec)\n",
+      "Step 2400: loss = 0.24 (0.340 sec)\n",
+      "Step 2450: loss = 0.16 (0.080 sec)\n",
+      "Step 2500: loss = 0.15 (0.080 sec)\n",
+      "Step 2550: loss = 0.19 (0.079 sec)\n",
+      "Step 2600: loss = 0.30 (0.080 sec)\n",
+      "Step 2650: loss = 0.13 (0.080 sec)\n",
+      "Step 2700: loss = 0.24 (0.080 sec)\n",
+      "Step 2750: loss = 0.13 (0.080 sec)\n",
+      "Step 2800: loss = 0.17 (0.081 sec)\n",
+      "Step 2850: loss = 0.14 (0.080 sec)\n",
+      "Step 2900: loss = 0.14 (0.080 sec)\n",
+      "Step 2950: loss = 0.09 (0.080 sec)\n",
       "Training Data Eval:\n",
-      "  Num examples: 1600  Num correct: 1598  Precision @ 1: 0.9988\n",
+      "  Num examples: 3200  Num correct: 3095  Precision @ 1: 0.9672\n",
       "Test Data Eval:\n",
-      "  Num examples: 800  Num correct: 789  Precision @ 1: 0.9862\n",
-      "Step 3000: loss = 0.01 (0.093 sec)\n",
-      "Step 3050: loss = 0.03 (0.088 sec)\n",
-      "Step 3100: loss = 0.01 (0.088 sec)\n",
-      "Step 3150: loss = 0.01 (0.088 sec)\n",
-      "Step 3200: loss = 0.01 (0.240 sec)\n",
-      "Step 3250: loss = 0.01 (0.089 sec)\n",
-      "Step 3300: loss = 0.01 (0.087 sec)\n",
-      "Step 3350: loss = 0.02 (0.087 sec)\n",
-      "Step 3400: loss = 0.01 (0.090 sec)\n",
-      "Step 3450: loss = 0.01 (0.088 sec)\n",
-      "Step 3500: loss = 0.01 (0.084 sec)\n",
-      "Step 3550: loss = 0.01 (0.081 sec)\n",
-      "Step 3600: loss = 0.01 (0.241 sec)\n",
-      "Step 3650: loss = 0.01 (0.088 sec)\n",
-      "Step 3700: loss = 0.01 (0.084 sec)\n",
-      "Step 3750: loss = 0.01 (0.087 sec)\n",
-      "Step 3800: loss = 0.00 (0.088 sec)\n",
-      "Step 3850: loss = 0.01 (0.084 sec)\n",
-      "Step 3900: loss = 0.00 (0.084 sec)\n",
-      "Step 3950: loss = 0.01 (0.088 sec)\n",
+      "  Num examples: 1600  Num correct: 1356  Precision @ 1: 0.8475\n",
+      "Step 3000: loss = 0.08 (0.090 sec)\n",
+      "Step 3050: loss = 0.17 (0.080 sec)\n",
+      "Step 3100: loss = 0.13 (0.080 sec)\n",
+      "Step 3150: loss = 0.15 (0.080 sec)\n",
+      "Step 3200: loss = 0.13 (0.341 sec)\n",
+      "Step 3250: loss = 0.10 (0.080 sec)\n",
+      "Step 3300: loss = 0.05 (0.080 sec)\n",
+      "Step 3350: loss = 0.12 (0.084 sec)\n",
+      "Step 3400: loss = 0.10 (0.080 sec)\n",
+      "Step 3450: loss = 0.09 (0.080 sec)\n",
+      "Step 3500: loss = 0.11 (0.080 sec)\n",
+      "Step 3550: loss = 0.06 (0.080 sec)\n",
+      "Step 3600: loss = 0.08 (0.080 sec)\n",
+      "Step 3650: loss = 0.13 (0.080 sec)\n",
+      "Step 3700: loss = 0.09 (0.082 sec)\n",
+      "Step 3750: loss = 0.04 (0.087 sec)\n",
+      "Step 3800: loss = 0.12 (0.082 sec)\n",
+      "Step 3850: loss = 0.08 (0.087 sec)\n",
+      "Step 3900: loss = 0.11 (0.079 sec)\n",
+      "Step 3950: loss = 0.08 (0.086 sec)\n",
       "Training Data Eval:\n",
-      "  Num examples: 1600  Num correct: 1600  Precision @ 1: 1.0000\n",
+      "  Num examples: 3200  Num correct: 3144  Precision @ 1: 0.9825\n",
       "Test Data Eval:\n",
-      "  Num examples: 800  Num correct: 792  Precision @ 1: 0.9900\n"
+      "  Num examples: 1600  Num correct: 1408  Precision @ 1: 0.8800\n"
      ]
     }
    ],
