--- a/CNN_feed.ipynb
+++ b/CNN_feed.ipynb
@@ -25,7 +25,7 @@
     "from six.moves import xrange  # pylint: disable=redefined-builtin\n",
     "import tensorflow as tf\n",
     "import os\n",
-    "import IndianPinesTF \n",
+    "import IndianPinesCNN \n",
     "import patch_size\n",
     "# import IndianPines_data_set as input_data\n",
     "import Spatial_dataset as input_data"
@@ -103,7 +103,7 @@
     "    # Note that the shapes of the placeholders match the shapes of the full\n",
     "    # image and label tensors, except the first dimension is now batch_size\n",
     "    # rather than the full size of the train or test data sets.\n",
-    "    images_placeholder = tf.placeholder(tf.float32, shape=(batch_size, IndianPinesTF\n",
+    "    images_placeholder = tf.placeholder(tf.float32, shape=(batch_size, IndianPinesCNN\n",
     "                                                           .IMAGE_PIXELS))\n",
     "    labels_placeholder = tf.placeholder(tf.int32, shape=(batch_size))\n",
     "    return images_placeholder, labels_placeholder\n"
@@ -230,20 +230,20 @@
     "        images_placeholder, labels_placeholder = placeholder_inputs(FLAGS.batch_size)\n",
     "\n",
     "        # Build a Graph that computes predictions from the inference model.\n",
-    "        logits = IndianPinesTF.inference(images_placeholder,\n",
+    "        logits = IndianPinesCNN.inference(images_placeholder,\n",
     "                                 FLAGS.conv1,\n",
     "                                 FLAGS.conv2,        \n",
     "                                 FLAGS.hidden1,\n",
     "                                 FLAGS.hidden2)\n",
     "\n",
     "        # Add to the Graph the Ops for loss calculation.\n",
-    "        loss = IndianPinesTF.loss(logits, labels_placeholder)\n",
+    "        loss = IndianPinesCNN.loss(logits, labels_placeholder)\n",
     "\n",
     "        # Add to the Graph the Ops that calculate and apply gradients.\n",
-    "        train_op = IndianPinesTF.training(loss, FLAGS.learning_rate)\n",
+    "        train_op = IndianPinesCNN.training(loss, FLAGS.learning_rate)\n",
     "\n",
     "        # Add the Op to compare the logits to the labels during evaluation.\n",
-    "        eval_correct = IndianPinesTF.evaluation(logits, labels_placeholder)\n",
+    "        eval_correct = IndianPinesCNN.evaluation(logits, labels_placeholder)\n",
     "\n",
     "        # Build the summary operation based on the TF collection of Summaries.\n",
     "    #    summary_op = tf.merge_all_summaries()\n",
@@ -296,7 +296,7 @@
     "\n",
     "            # Save a checkpoint and evaluate the model periodically.\n",
     "            if (step + 1) % 1000 == 0 or (step + 1) == FLAGS.max_steps:\n",
-    "                saver.save(sess, 'model-spatial-'+str(IMAGE_SIZE)+'X'+str(IMAGE_SIZE)+'.ckpt', global_step=step)\n",
+    "                saver.save(sess, 'model-spatial-CNN-'+str(IMAGE_SIZE)+'X'+str(IMAGE_SIZE)+'.ckpt', global_step=step)\n",
     "\n",
     "            # Evaluate against the training set.\n",
     "                print('Training Data Eval:')\n",
