MLP results added and described

--- a/IndianPines_DataSet_Preparation_Without_Augmentation.ipynb
+++ b/IndianPines_DataSet_Preparation_Without_Augmentation.ipynb
@@ -86,7 +86,7 @@
     {
      "data": {
       "text/plain": [
-       "11"
+       "1"
       ]
      },
      "execution_count": 4,
@@ -215,19 +215,19 @@
      "text": [
       "46\n",
       "1428\n",
-      "685\n",
-      "221\n",
-      "423\n",
+      "830\n",
+      "237\n",
+      "483\n",
       "730\n",
       "28\n",
       "478\n",
       "20\n",
-      "924\n",
-      "2350\n",
-      "561\n",
+      "972\n",
+      "2455\n",
+      "593\n",
       "205\n",
       "1265\n",
-      "265\n",
+      "386\n",
       "93\n"
      ]
     }
@@ -280,19 +280,19 @@
      "text": [
       "35\n",
       "1071\n",
-      "514\n",
-      "166\n",
-      "318\n",
+      "623\n",
+      "178\n",
+      "363\n",
       "548\n",
       "21\n",
       "359\n",
       "15\n",
-      "693\n",
-      "1763\n",
-      "421\n",
+      "729\n",
+      "1842\n",
+      "445\n",
       "154\n",
       "949\n",
-      "199\n",
+      "290\n",
       "70\n"
      ]
     }
@@ -458,7 +458,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2426\n",
+      "2557\n",
       "3200\n"
      ]
     }
@@ -495,14 +495,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n"
+      "0 1 2 3 4 5 6 7\n"
      ]
     }
    ],
@@ -515,7 +508,7 @@
     "    train_dict[\"train_patch\"] = TRAIN_PATCH[start:end]\n",
     "    train_dict[\"train_labels\"] = TRAIN_LABELS[start:end]\n",
     "    scipy.io.savemat(os.path.join(DATA_PATH, file_name),train_dict)\n",
-    "    print i"
+    "    print i,"
    ]
   },
   {
